--- a/login.html
+++ b/login.html
@@ -20,6 +20,7 @@
             </div>
             <button type="submit">Iniciar Sesión</button>
             <a href="#" id="forgot-password">¿Olvidaste tu contraseña?</a>
+            <a href="registro.html">¿Eres nuevo? Regístrate aquí</a>
         </form>
         <p id="message" class="hidden"></p>
     </div>
