--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h2>Iniciar Sesión</h2>
-        <form id="login-form">
+        <form id="login-form" method="POST" action="login.php">
             <div class="input-container">
                 <label for="username">Usuario:</label>
                 <input type="text" id="username" name="username" required>
@@ -19,11 +19,10 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit">Iniciar Sesión</button>
-            <a href="#" id="forgot-password">¿Olvidaste tu contraseña?</a>
+            <a href="recover.html" id="forgot-password">¿Olvidaste tu contraseña?</a>
             <a href="registro.html">¿Eres nuevo? Regístrate aquí</a>
         </form>
         <p id="message" class="hidden"></p>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
