--- a/principal.html
+++ b/principal.html
@@ -3,31 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles1.css">
-    <title>Página Principal</title>
+    <title>Pedido de Comida</title>
+    <link rel="stylesheet" href="principal.css">
 </head>
 <body>
-    <header>
-        <h1>Mi Página Principal</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Acerca de</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+        <h1>Pedido de Comida</h1>
+    </nav>
 
     <main>
-        <section>
-            <h2>Bienvenido a mi sitio web</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius eget arcu eget facilisis. Integer condimentum.</p>
-        </section>
+        <div id="tables-container">
+            <h2>Mesas</h2>
+            <div class="table" data-table-id="1">
+                <span class="table-number">1</span>
+                <br></br>
+                <button class="open-table-button">+</button>
+            </div>
+            <div class="table" data-table-id="2">
+                <span class="table-number">2</span>
+                <br></br>
+                <button class="open-table-button">+</button>
+            </div>
+        </div>
     </main>
 
-    <footer>
-        <p>&copy; 2023 Mi Sitio Web</p>
-    </footer>
+    <div id="form-container" class="hidden">
+        <div class="open-table-form">
+            <h3>Abrir Mesa</h3>
+            <form>
+                <div class="form-group">
+                    <label for="garzon">Garzón:</label>
+                    <input type="text" id="garzon" name="garzon" required>
+                </div>
+                <div class="form-group">
+                    <label for="num-personas">Número de Personas:</label>
+                    <input type="number" id="num-personas" name="num-personas" required>
+                </div>
+                <div class="form-group">
+                    <button type="submit">Abrir Mesa</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script src="principal.js"></script>
 </body>
 </html>
