principal responsive styles

--- a/principal.html
+++ b/principal.html
@@ -13,15 +13,20 @@
       <div class="navbar-icon">
         <i class="fas fa-utensils"></i>
       </div>
-      <div class="navbar-date">
-        <span id="date"></span>
+      <div class="navbar-content">
+        <div class="navbar-date">
+          <span id="date"></span>
+        </div>
+        <div class="navbar-time">
+          <span id="time"></span>
+        </div>
+        <div class="navbar-profile">
+          <i class="fas fa-user"></i>
+          <span>Nombre de Usuario</span>
+        </div>
       </div>
-      <div class="navbar-time">
-        <span id="time"></span>
-      </div>
-      <div class="navbar-profile">
-        <i class="fas fa-user"></i>
-        <span>Nombre de Usuario</span>
+      <div class="navbar-menu">
+        <img src="./assets//img/cuadricula.png" alt="menu-burger">
       </div>
     </div>
     <div class="subnav">
